--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@ layout: default
 title: Welcome
 ---
 
-# Hello!
-Welcome to my GitHub Page.
+Hi, I’m Manley Evangelista — a tech enthusiast and aspiring cybersecurity professional.
+
+I’ve been working with computers since 2007, starting with hardware upgrades and software troubleshooting. Around 2012, I expanded into smartphones and tablets. I’m most proficient with Windows and Android, but I also have hands-on experience with macOS, iOS, and Linux environments.
+
+About ten years ago, I passed the CompTIA A+ 801 & 802 exams. While that certification has since lapsed, it laid a strong foundation for the skills I continue to build today. I’m currently focused on earning the CompTIA Security+ certification as I work toward a formal career in IT and cybersecurity.
+
+This profile serves as a personal portfolio to showcase my skills, projects, and growing knowledge in both information technology and cybersecurity.
+
+You can check out my repositories for more.
